--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -2,7 +2,7 @@ user-db=postgres
 pass-db=password
 #url-db=jdbc:postgresql://localhost:5432/ivrIntegration
 #url-db=jdbc:postgresql://localhost:5432/ivr_nuevo
-url-db=jdbc:postgresql://localhost:5432/icpBD
+url-db=jdbc:postgresql://localhost:5432/icpBD2
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
