--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+spring.datasource.url=jdbc:postgresql://localhost:5432/icpBD
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
