--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -4,7 +4,7 @@ pass-db=password
 #url-db=jdbc:postgresql://localhost:5432/ivr_nuevo
 url-db=jdbc:postgresql://localhost:5432/icpBD
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 longitud-pin=6
 
