--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
+spring.jpa.hibernate.ddl-auto=update
 
 min.idle.conexion=1
 max.active.conexion=10
