--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/icpBD
-spring.datasource.username=postgres
-spring.datasource.password=password
+icp.datasource.url=jdbc:postgresql://localhost:5432/icpBD
+icp.datasource.username=postgres
+icp.datasource.password=password
+
+
+
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
