--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -2,6 +2,9 @@ icp.datasource.url=jdbc:postgresql://localhost:5432/icpBD
 icp.datasource.username=postgres
 icp.datasource.password=password
 
+rep.datasource.url=jdbc:postgresql://localhost:5432/rep_regulatorios
+rep.datasource.username=postgres
+rep.datasource.password=password
 
 
 spring.datasource.driverClassName=org.postgresql.Driver
