--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -1,10 +1,13 @@
 icp.datasource.url=jdbc:postgresql://localhost:5432/icpBD
 icp.datasource.username=postgres
 icp.datasource.password=password
+icp.jpa.hibernate.ddl-auto=update
 
 rep.datasource.url=jdbc:postgresql://localhost:5432/rep_regulatorios
 rep.datasource.username=postgres
 rep.datasource.password=password
+rep.jpa.hibernate.ddl-auto=update
+
 
 
 spring.datasource.driverClassName=org.postgresql.Driver
