--- a/servicio-consultas-ef-dev.properties
+++ b/servicio-consultas-ef-dev.properties
@@ -1,5 +1,5 @@
 #Conexion a BD Replica
-ef.datasource.url=jdbc:postgresql://localhost:5432/reportes_regulatorios
+ef.datasource.url=jdbc:postgresql://localhost:5432/baseef
 ef.datasource.username=postgres
 ef.datasource.password=password
 
