--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -1,8 +1,8 @@
 user-db=postgres
 pass-db=password
 #url-db=jdbc:postgresql://localhost:5432/ivrIntegration
-url-db=jdbc:postgresql://localhost:5432/ivr_nuevo
-#url-db=jdbc:postgresql://localhost:5432/ivr
+#url-db=jdbc:postgresql://localhost:5432/ivr_nuevo
+url-db=jdbc:postgresql://localhost:5432/ivr
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
