--- a/reportes-regulatorios-reune-dev.properties
+++ b/reportes-regulatorios-reune-dev.properties
@@ -19,9 +19,13 @@ client.post.baseUrl=https://spei3-qa.stpmex.com:8090
 
 ruta.notificacion.correcion
 
-url.reportes.db=jdbc:postgresql://10.5.1.57:5432/rep_regulatorios
-postgres.username=rep.regulatorios
-postgres.password=hq6;e=v5<sn?n>HFNfAM
+#url.reportes.db=jdbc:postgresql://10.5.1.57:5432/rep_regulatorios
+#postgres.username=rep.regulatorios
+#postgres.password=hq6;e=v5<sn?n>HFNfAM
+
+url.reportes.db=jdbc:postgresql://localhost:5432/reune
+postgres.username=postgres
+postgres.password=password
 
 #esta propiedad es para que todas las trazas a o logs se manden siempre al servidor
 #spring.sleuth.sampler.probability=1.0
