--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -1,4 +1,4 @@
-icp.datasource.url=jdbc:postgresql://localhost:5432/R24_20250502
+icp.datasource.url=jdbc:postgresql://localhost:5432/R24-JON
 icp.datasource.username=postgres
 icp.datasource.password=password
 icp.jpa.hibernate.ddl-auto=update
