--- a/ivrIntegration-dev.properties
+++ b/ivrIntegration-dev.properties
@@ -2,9 +2,8 @@ user-db=postgres
 pass-db=password
 #url-db=jdbc:postgresql://localhost:5432/ivrIntegration
 #url-db=jdbc:postgresql://localhost:5432/ivr_nuevo
-#url-db=jdbc:postgresql://localhost:5432/ivr
+url-db=jdbc:postgresql://localhost:5432/ivr
 #url-db=jdbc:postgresql://localhost:5432/ivrsicli
-url-db=jdbc:postgresql://localhost:5432/ivr_gh
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
