--- a/r24-services-dev.properties
+++ b/r24-services-dev.properties
@@ -1,9 +1,9 @@
-icp.datasource.url=jdbc:postgresql://localhost:5432/R24-JON
+icp.datasource.url=jdbc:postgresql://localhost:5432/R24_20250502
 icp.datasource.username=postgres
 icp.datasource.password=password
 icp.jpa.hibernate.ddl-auto=update
 
-rep.datasource.url=jdbc:postgresql://localhost:5432/rep_regulatorios
+rep.datasource.url=jdbc:postgresql://localhost:5432/R24_20250502
 rep.datasource.username=postgres
 rep.datasource.password=password
 rep.jpa.hibernate.ddl-auto=update
