--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -1,6 +1,6 @@
-user-db=postgres
-pass-db=password
-url-db=jdbc:postgresql://localhost:5432/ivr
+spring.datasource.url=jdbc:postgresql://localhost:5432/ivr
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
