--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -1,17 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ivr
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 
-db-connection-active=100
-db-connection-maxidle=20
-db-connection-minidle=10
-db-connection-size=10
-db-connection-interval=30000
-db-connection-run=30000
-db-connection-time=60000
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
