--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ivr
 spring.datasource.username=postgres
 spring.datasource.password=password
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
