--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -3,14 +3,17 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.idle-timeout=300000
 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
