--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -5,6 +5,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.hikari.pool-name=HikariCP
 
 
 spring.datasource.hikari.maximum-pool-size=20
