--- a/ivrIntegrationSicli-dev.properties
+++ b/ivrIntegrationSicli-dev.properties
@@ -2,7 +2,7 @@ user-db=postgres
 pass-db=password
 url-db=jdbc:postgresql://localhost:5432/ivrsicli
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 longitud-pin=6
 
