--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 
