--- a/stp-di-polizas-services-dev.properties
+++ b/stp-di-polizas-services-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/erp
+spring.datasource.url=jdbc:postgresql://localhost:5432/database_erp
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driverClassName=org.postgresql.Driver
